# Pumas-Library

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AUDIT_SUMMARY.md  BUILD_README.md  CHANGELOG.md  COMFYUI_VERSION_MANAGER_PLAN.md  CONTRIBUTING.md  DARK_THEME_PLAN.md  PRODUCTION_READINESS_PLAN.md  PROPOSAL-diffusion-inference-params.md  README.md  RELEASING.md  THIRD-PARTY-NOTICES.md  TROUBLESHOOTING.md  audit.md  cache_plan.md  comfyui-setup.spec  diagnose_imports.py  install.sh  launcher.ps1  launcher.sh  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pytest.ini  requirements-dev.txt  requirements-lock.txt  requirements.txt  ruff.toml  run.sh  run_tests.sh  setup.py  temp  test_api.py  test_open_path.py
rust/: Cargo.toml  README.md
rust/crates/: README.md
rust/crates/pumas-app-manager/: Cargo.toml  README.md
rust/crates/pumas-app-manager/src/: README.md  api_proxy.rs  lib.rs  ollama_client.rs  torch_client.rs
rust/crates/pumas-app-manager/src/custom_nodes/: README.md  mod.rs
rust/crates/pumas-app-manager/src/ollama_client/: README.md  naming.rs
rust/crates/pumas-app-manager/src/process/: README.md  factory.rs  mod.rs  traits.rs
rust/crates/pumas-app-manager/src/version_manager/: README.md  constraints.rs  dependencies.rs  installer.rs  launcher.rs  mod.rs  ollama.rs  progress.rs  size_calculator.rs  state.rs
rust/crates/pumas-core/: Cargo.toml  README.md
rust/crates/pumas-core/examples/: README.md  basic_usage.rs  generate_migration_dry_run.rs  hf_metadata_audit.rs  migrate_model_types.rs  reclassify_model_types.rs  reconcile_library_state.rs  repair_library_integrity.rs  search_models.rs
rust/crates/pumas-core/src/: README.md  cancel.rs  config.rs  error.rs  lib.rs  runtime_profiles.rs  tests.rs
rust/crates/pumas-core/src/api/: README.md  builder.rs  conversion.rs  hf.rs  links.rs  mapping.rs  migration.rs  mod.rs  models.rs  network.rs  process.rs  reconciliation.rs  resource_responses.rs  runtime_profiles.rs  runtime_tasks.rs  serving.rs  state.rs  state_hf.rs  state_process.rs  state_runtime.rs  state_runtime_profiles.rs  status_telemetry.rs  system.rs
rust/crates/pumas-core/src/cache/: README.md  mod.rs  sqlite.rs  traits.rs
rust/crates/pumas-core/src/conversion/: README.md  llama_cpp.rs  manager.rs  mod.rs  nvfp4.rs  nvfp4_script.py  pipeline.rs  progress.rs  scripts.rs  sherry.rs  sherry_script.py  types.rs
rust/crates/pumas-core/src/custom_nodes/: mod.rs  types.rs
rust/crates/pumas-core/src/index/: README.md  fts5.rs  mod.rs  model_index.rs  query.rs
rust/crates/pumas-core/src/ipc/: README.md  client.rs  local_client.rs  mod.rs  protocol.rs  server.rs
rust/crates/pumas-core/src/launcher/: README.md  mod.rs  patch.rs  updater.rs
rust/crates/pumas-core/src/metadata/: README.md  atomic.rs  manager.rs  mod.rs
rust/crates/pumas-core/src/model_library/: CACHING.md  README.md  artifact_identity.rs  artifact_load_target.rs  dependencies.rs  dependency_pins.rs  directory_import.rs  download_store.rs  external_assets.rs  hashing.rs  hf_cache.rs  hf_client.rs  identifier.rs  importer.rs  library.rs  link_registry.rs  mapper.rs  merge.rs  metadata_v2.rs  mod.rs  model_type_resolver.rs  naming.rs  read_only.rs  sharding.rs  task_signature.rs  types.rs  watcher.rs
rust/crates/pumas-core/src/models/: README.md  api_response.rs  artifact_load_target.rs  custom_node.rs  github.rs  inference_defaults.rs  mod.rs  model.rs  model_library_selector.rs  package_facts.rs  responses.rs  runtime_profile.rs  serving.rs  version.rs
rust/crates/pumas-core/src/network/: README.md  circuit_breaker.rs  client.rs  download.rs  github.rs  manager.rs  mod.rs  retry.rs  web_source.rs
rust/crates/pumas-core/src/onnx_runtime/: README.md  config.rs  fake.rs  manager.rs  mod.rs  output.rs  package.rs  postprocess.rs  real.rs  real_backend.rs  tensors.rs  tests.rs  tokenizer.rs
rust/crates/pumas-core/src/platform/: README.md  mod.rs  paths.rs  permissions.rs  process.rs
rust/crates/pumas-core/src/plugins/: README.md  loader.rs  mod.rs  schema.rs
rust/crates/pumas-core/src/process/: README.md  detection.rs  launcher.rs  manager.rs  mod.rs
rust/crates/pumas-core/src/providers/: README.md  mod.rs
rust/crates/pumas-core/src/registry/: README.md  library_registry.rs  mod.rs
rust/crates/pumas-core/src/runtime_profiles/: README.md  launch_specs.rs  launch_strategy.rs  route_config.rs
rust/crates/pumas-core/src/serving/: README.md  gateway_alias.rs  mod.rs  placement.rs
rust/crates/pumas-core/src/shortcut/: desktop_entry.rs  icon.rs  launch_script.rs  manager.rs  mod.rs
rust/crates/pumas-core/src/system/: README.md  gpu.rs  mod.rs  resources.rs  utils.rs
rust/crates/pumas-core/src/version_manager/: constraints.rs  dependencies.rs  installer.rs  launcher.rs  mod.rs  ollama.rs  progress.rs  size_calculator.rs  state.rs
rust/crates/pumas-core/tests/: README.md  api_tests.rs  artifact_load_target_contract_fixtures.rs  dependency_requirements_contract_fixtures.rs  metadata_artifact_tests.rs  model_ref_contract_fixtures.rs  package_facts_contract_fixtures.rs  package_facts_resolution.rs  runtime_profile_contract_fixtures.rs
rust/crates/pumas-core/tests/fixtures/: README.md
rust/crates/pumas-rpc/: Cargo.toml  README.md
rust/crates/pumas-rpc/src/: README.md  handler.rs  main.rs  provider_clients.rs  server.rs  wrapper.rs
rust/crates/pumas-rpc/src/handlers/: README.md  conversion.rs  custom_nodes.rs  links.rs  mod.rs  models.rs  ollama.rs  openai_gateway.rs  openai_gateway_onnx.rs  openai_gateway_tests.rs  plugins.rs  process.rs  runtime_profiles.rs  serving.rs  serving_llama_cpp.rs  serving_llama_cpp_router.rs  serving_llama_cpp_shared.rs  serving_ollama.rs  serving_onnx.rs  shared.rs  (+6 more)
rust/crates/pumas-rpc/tests/: README.md  integration_tests.rs
rust/crates/pumas-rustler/: Cargo.toml  README.md  build.rs
rust/crates/pumas-rustler/src/: README.md  lib.rs
rust/crates/pumas-uniffi/: Cargo.toml  README.md  build.rs
rust/crates/pumas-uniffi/src/: README.md  bindings.rs  lib.rs  pumas.udl
(+875 files in other folders)
