[workspace]
resolver = "2"
members = ["crates/pumas-core", "crates/pumas-app-manager", "crates/pumas-rpc", "crates/pumas-uniffi"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jeremy"]
license = "MIT"
repository = "https://github.com/jeremy/pumas-library"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database (bundled SQLite includes FTS5 by default)
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# System information
sysinfo = "0.32"

# Cross-platform signal handling
ctrlc = "3.4"

# Windows shortcut files
lnk = "0.6"

# File operations
tempfile = "3"
walkdir = "2"
fs2 = "0.4"

# Archive extraction
zip = "2"
flate2 = "1"
tar = "0.4"
zstd = "0.13"

# Hashing
sha2 = "0.10"
blake3 = "1"
hex = "0.4"

# URL encoding
urlencoding = "2"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# URL and path handling
url = "2"

# Semver parsing
semver = "1"

# Regex
regex = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# TTL Cache
mini-moka = "0.10"

# Rate limiting
governor = "0.7"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Directory utilities
dirs = "5"

# File system watching
notify = "7"
notify-debouncer-mini = "0.5"

# Cross-language bindings
uniffi = "0.28"

# Platform-specific process management (used conditionally in crates)
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

# Internal crates
pumas-library = { path = "crates/pumas-core" }
pumas-app-manager = { path = "crates/pumas-app-manager" }

[profile.release]
lto = true
codegen-units = 1
strip = true
