[package]
name = "pumas-app-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Application version and custom node management for Pumas Library"

[dependencies]
# Internal crates
pumas-library = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client (for GitHub API)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# File operations
tempfile = { workspace = true }
walkdir = { workspace = true }

# Archive extraction
zip = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }

# Time handling
chrono = { workspace = true }

# Semver parsing
semver = { workspace = true }

# Regex
regex = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }

# Platform-specific: Unix
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
