[package]
name = "pumas-library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless library for Pumas model and version management"
keywords = ["ai", "models", "library", "huggingface", "model-management"]
categories = ["database", "filesystem"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["rt", "sync", "time", "net", "io-util", "fs", "process", "macros"] }

# HTTP client
reqwest = { workspace = true }

# Database
rusqlite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# System information
sysinfo = { workspace = true }

# Cross-platform signal handling
ctrlc = { workspace = true }

# Windows shortcut files
lnk = { workspace = true }

# File operations
tempfile = { workspace = true }
walkdir = { workspace = true }
fs2 = { workspace = true }

# Archive extraction
zip = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }

# Hashing
sha2 = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }

# URL encoding
urlencoding = { workspace = true }

# Async utilities
futures = { workspace = true }
async-trait = { workspace = true }

# URL handling
url = { workspace = true }

# Semver parsing
semver = { workspace = true }

# Regex
regex = { workspace = true }

# Time handling
chrono = { workspace = true }

# TTL Cache
mini-moka = { workspace = true }

# Rate limiting
governor = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Random number generation
rand = "0.9"

# Directory utilities (home dir, etc.)
dirs = { workspace = true }

# File system watching
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

# Cross-language bindings (optional)
uniffi = { workspace = true, optional = true }

# Platform-specific: Unix
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

# Platform-specific: Windows
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[features]
default = ["full"]
full = ["hf-client", "process-manager", "gpu-monitor"]
hf-client = []       # HuggingFace model search & download
process-manager = [] # ComfyUI process management
gpu-monitor = []     # GPU monitoring via nvidia-smi
uniffi = ["dep:uniffi"]  # Cross-language bindings via UniFFI
