[package]
name = "pumas-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JSON-RPC server for Pumas - Electron backend"

[[bin]]
name = "pumas-rpc"
path = "src/main.rs"

[dependencies]
# Internal crates
pumas-library = { workspace = true }
pumas-app-manager = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "net", "macros", "signal"] }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Filesystem paths
dirs = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client (for plugin health checks)
reqwest = { workspace = true }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
