[package]
name = "pumas-uniffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "UniFFI bindings for pumas-core - cross-language model management"
keywords = ["ai", "models", "ffi", "bindings", "uniffi"]
categories = ["api-bindings", "development-tools::ffi"]

[lib]
crate-type = ["cdylib", "lib"]
name = "pumas_uniffi"

[dependencies]
# Core library with UniFFI feature enabled
pumas-library = { path = "../pumas-core", features = ["uniffi"] }

# UniFFI runtime (tokio feature required for async method export)
uniffi = { workspace = true, features = ["tokio"] }

# Async runtime for bridging async functions
tokio = { workspace = true, features = ["rt", "sync"] }

# Serialization (for HashMap/Value → JSON string conversion at FFI boundary)
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

[[bin]]
name = "pumas-uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["cli"]

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[features]
default = []
cli = ["uniffi/cli"]
