[package]
name = "pumas-uniffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "UniFFI bindings for pumas-core - cross-language model management"
keywords = ["ai", "models", "ffi", "bindings", "uniffi"]
categories = ["api-bindings", "development-tools::ffi"]

[lib]
crate-type = ["cdylib", "lib"]
name = "pumas_uniffi"

[dependencies]
# Core library with UniFFI feature enabled (only needed for the cdylib, not the CLI)
pumas-library = { path = "../pumas-core", features = ["uniffi"], optional = true }

# UniFFI runtime (tokio feature required for async method export)
uniffi = { workspace = true, features = ["tokio"] }

# Async runtime for bridging async functions
tokio = { workspace = true, features = ["rt", "sync"], optional = true }

# Serialization (for HashMap/Value → JSON string conversion at FFI boundary)
serde_json = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true, optional = true }

[[bin]]
name = "pumas-uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["cli"]

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[features]
default = ["bindings"]
bindings = ["dep:pumas-library", "dep:tokio", "dep:serde_json", "dep:thiserror"]
cli = ["uniffi/cli"]
